src/tests/routes/me/snapshots/all__routes__me__get__me-3.snap
---
source: src/tests/routes/me/get.rs
expression: response.into_json()
---
{
  "owned_crates": [
    {
      "email_notifications": true,
      "id": 1,
      "name": "foo_my_packages"
    }
  ],
  "user": {
    "avatar": null,
    "email": "something@example.com",
    "email_verification_sent": true,
    "email_verified": true,
    "id": 1,
    "login": "foo",
    "name": null,
    "url": "https://github.com/foo"
  }
}
